June 24th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Removed references from sub substitute2.

June 23th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Added config option mysql_ping_insert to enable / disable pinging the
  database before an INSERT.
- Changed ping_mysql subroutine to mysql_ping

June 18th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- MySQL:  Now does a ping before trying to do the INSERT even if
  mysql_ping_interval is disabled.
- Set default for mysql_ping_interval in snmptt to 500 match the .ini default.

June 17th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Removed escape_sequences_enable option and replaced it with variable
  substitutions $Fa, $Ff, $Fn, $Fr and $Ft.

June 11th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Added mysql_ping_interval option to set how often the MySQL server
  should be 'pinged'.  If the 'ping' fails, it will attempt to re-connect
  to the database.
- Added escape_sequences_enable option to enable the use of 
  common escape sequences in FORMAT and EXEC lines.
- Added variable substitution $D to dump the description text from 
  the MIB file.  Enabled using the mib_descriptions_enable snmptt.ini
  variable.  Thanks to Toshiyuki Haginaga.

June 7th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Moved database connection code to create_db_connections function.
  Function is now called AFTER changing users when running in 
  daemon mode to prevent 'MySQL gone away' errors on some systems.
  Thanks to Toshiyuki Haginaga.

May 24th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Added 'Total traps ignored' to stats.

May 14th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Added error number output for MySQL.

May 13th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Add support for /usr/local/etc/snmp and /usr/local/etc.
- Added help text for user when a Perl module is not found when loading
  via 'require'.